vertical-align fixed

--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -77,7 +77,7 @@ a { text-decoration: none; }
 nav { width: 60vw; position: absolute; top: 0; right: 0; }
 nav > ul { overflow: hidden; }
 nav > ul > li { float: left; width: 33.3%; text-align: center; }
-nav > ul > li > a { display: inline-block; width: 20vw; height: 60px; color: #fafafa; font-size: 15px; font-weight: bold; vertical-align: middle}
+nav > ul > li > a { display: inline-block; width: 20vw; height: 60px; color: #fafafa; font-size: 15px; font-weight: bold; vertical-align: middle; padding: 21px;}
 nav > ul > li:hover > a { color: #ffffff;  background: #2d2d2d; }
 nav > ul > li:hover > ul { display: block; }
 
